docs/v8.2/packages_api/data/fieldnamepickerconfigsettings.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "FieldNamePickerConfigSettings"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## FieldNamePickerConfigSettings interface

<b>Signature</b>

```typescript
export interface FieldNamePickerConfigSettings 
```
<b>Import</b>

```typescript
import { FieldNamePickerConfigSettings } from '@grafana/data';
```
<b>Properties</b>

|  Property | Type | Description |
|  --- | --- | --- |
|  [filter](#filter-property) | <code>(field: Field) =&gt; boolean</code> | Function is a predicate, to test each element of the array. Return a value that coerces to true to keep the field, or to false otherwise. |
|  [info](#info-property) | <code>ComponentType&lt;FieldNamePickerInfoProps&gt; &#124; null</code> | When a field is selected, this component can show aditional information, including validation etc |
|  [noFieldsMessage](#nofieldsmessage-property) | <code>string</code> | Show this text when no values are found |
|  [placeholderText](#placeholdertext-property) | <code>string</code> | Placeholder text to display when nothing is selected. |
|  [width](#width-property) | <code>number</code> | Sets the width to a pixel value. |

### filter property

Function is a predicate, to test each element of the array. Return a value that coerces to true to keep the field, or to false otherwise.

<b>Signature</b>

```typescript
filter?: (field: Field) => boolean;
```

### info property

When a field is selected, this component can show aditional information, including validation etc

<b>Signature</b>

```typescript
info?: ComponentType<FieldNamePickerInfoProps> | null;
```

### noFieldsMessage property

Show this text when no values are found

<b>Signature</b>

```typescript
noFieldsMessage?: string;
```

### placeholderText property

Placeholder text to display when nothing is selected.

<b>Signature</b>

```typescript
placeholderText?: string;
```

### width property

Sets the width to a pixel value.

<b>Signature</b>

```typescript
width?: number;
```
